# simple-speed-test

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
public/: index.html  speedtest.js
src/: config.rs  lib.rs  server.rs  session.rs  settings.rs  tray.rs
