[package]
name = "simple-speed-test"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tray-icon = "0.22"
webbrowser = "1"
rfd = "0.15"
winit = "0.30"
